--- a/src/components/statics/data/VideoStats.scss
+++ b/src/components/statics/data/VideoStats.scss
@@ -1,30 +1,35 @@
+$btn-primary-color: #00ace6;
 
-  :global {
-
-  .paper {
+.stats-container {
     margin:100px;
-  }
+    display: flex;
+    flex-direction: column;
 
-  .ant-table-row-expand-icon {
-    cursor: pointer;
-    display: inline-block;
-    width: 17px;
-    height: 17px;
-    text-align: center;
-    line-height: 14px;
-    border: 1px solid #e8e8e8;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    background: #fff;
-}
+    .stats-header {
+      position: relative;
+      margin-bottom: 20px;
 
-.ant-table-row-expanded:after {
-    content: '-';
-}
-
-.ant-table-row-collapsed:after {
-    content: '+';
- }
+      .stats-header-clean {
+        background-color: $btn-primary-color;
+        color: #fff;
+        border-color: $btn-primary-color;
+        font-size: .875rem;
+        box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.11), 0 4px 6px 0 rgba(40, 77, 89, 0.1);
+        display: inline-block;
+        vertical-align: middle;
+        text-align: center;
+        text-decoration: none;
+        padding: 6px 12px;
+        margin: 0;
+        -ms-touch-action: manipulation;
+        touch-action: manipulation;
+        cursor: pointer;
+        outline: none;
+        position: relative;
+        background-image: none;
+        line-height: 1 !important;
+        min-height: 36px;
+        border: 1px solid #e4e4e4;
+      }
+    }
 }
