--- a/src/App.css
+++ b/src/App.css
@@ -9,14 +9,16 @@
 }
 
 .AppHeader {
-  background-color: #222;
+  background-color: #00ffe861;
   height: 150px;
   padding: 20px;
   color: white;
 }
 
 .AppTitle {
-  font-size: 1.5em;
+  font-size: 1.8em;
+  font-family: monospace;
+  font-weight: bolder;
 }
 
 .AppIntro {
